# MajcraftOpenGL

./: CMakeLists.txt
openGLtest/: DisplayManager.hpp  ObjLoader.h  Object.hpp  camera.hpp  main.cpp  mycube.mtl  shader.hpp  stb_image.cpp  stb_image.hpp
openGLtest/Librairies/glew/: glew.pc
openGLtest/Shaders/: cubeFragment.fs  cubeVertex.vs
